--- a/EVENT_MS/Site1.Master
+++ b/EVENT_MS/Site1.Master
@@ -12,169 +12,189 @@
     <form id="form1" runat="server">
         <div>
 
-            
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="">
-        <meta name="author" content="">
+            <!doctype html>
+            <html lang="en">
+            <head>
+                <meta charset="utf-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Leadership Event HTML5 Bootstrap v5 Template</title>
+                <meta name="description" content="">
+                <meta name="author" content="">
 
-        <!-- CSS FILES -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+                <title>Leadership Event HTML5 Bootstrap v5 Template</title>
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+                <!-- CSS FILES -->
+                <link rel="preconnect" href="https://fonts.googleapis.com">
 
-        <link href="css/bootstrap-icons.css" rel="stylesheet">
+                <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-        <link href="css/templatemo-leadership-event.css" rel="stylesheet">
-        <link href="css/page-transitions.css" rel="stylesheet">
-        
-<!--
+                <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+
+                <link href="css/bootstrap.min.css" rel="stylesheet">
+
+                <link href="css/bootstrap-icons.css" rel="stylesheet">
+
+                <link href="css/templatemo-leadership-event.css" rel="stylesheet">
+                <link href="css/page-transitions.css" rel="stylesheet">
+
+                <!--
 
 TemplateMo 575 Leadership Event
 
 https://templatemo.com/tm-575-leadership-event
 
 -->
-    </head>
-    
-    <body>
+            </head>
 
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
+            <body>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container">
 
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
-                    <i class="bi-bullseye brand-logo"></i>
-                    <span class="brand-text">Leadership <br> Event</span>
-                </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
 
-                <a class="nav-link custom-btn btn d-lg-none" href="#">Buy Tickets</a>
+                        <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
+                            <i class="bi-bullseye brand-logo"></i>
+                            <span class="brand-text">Leadership
+                                <br>
+                                Event</span>
+                        </a>
 
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_1">Home</a>
-                        </li>
+                        <a class="nav-link custom-btn btn d-lg-none" href="#">Buy Tickets</a>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link click-scroll" href="#section_1">Home</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="speakers.html">Speakers</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="about.html">About</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Schedules</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="speakers.html">Speakers</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="pricing.html">Pricing</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link click-scroll" href="#section_4">Schedules</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="venue.html">Venue</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="pricing.html">Pricing</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="venue.html">Venue</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="login1.aspx">Login</a>
-                        </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.aspx">Contact</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link" href="sign up.aspx">Register</a>
-                        </li>
+                                <%--  <li class="nav-item">
+                                    <a class="nav-link" href="login1.aspx">Login</a>
+                                </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link custom-btn btn d-none d-lg-block" href="buy-now.html">Buy Tickets</a>
-                        </li>
-                    </ul>
-                <div>
-                        
-            </div>
-        </nav>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="sign up.aspx">Register</a>
+                                </li>--%>
 
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+                                <li class="nav-item">
+                                    <a class="nav-link custom-btn btn d-none d-lg-block" href="login.aspx">logout</a>
+                                </li>
 
-             <footer class="site-footer">
-            <div class="container">
-                <div class="row align-items-center">
+                                <%--  <li class="nav-item">
+      <a class="nav-link custom-btn btn d-none d-lg-block" href="sign up.aspx">Signup</a>
+  </li>--%>
 
-                    <div class="col-lg-12 col-12 border-bottom pb-5 mb-5">
-                        <div class="d-flex">
-                            <a href="index.html" class="navbar-brand">
-                                <i class="bi-bullseye brand-logo"></i>
-                                <span class="brand-text">Leadership <br> Event</span>
-                            </a>
+                                <li class="nav-item">
+                                    <a class="nav-link custom-btn btn d-none d-lg-block" href="admin.aspx">Admin</a>
+                                </li>
 
-                            <ul class="social-icon ms-auto">
-                                <li><a href="#" class="social-icon-link bi-facebook"></a></li>
-
-                                <li><a href="#" class="social-icon-link bi-instagram"></a></li>
-
-                                <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
-
-                                <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link custom-btn btn d-none d-lg-block" href="buy-now.html">Buy Tickets</a>
+                                </li>
                             </ul>
-                        </div>
-                    </div>
+                            <div>
+                            </div>
+                </nav>
 
-                    <div class="col-lg-7 col-12">
-                        <ul class="footer-menu d-flex flex-wrap">
-                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">Our Story</a></li>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                </asp:ContentPlaceHolder>
 
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Code of Conduct</a></li>
+                <footer class="site-footer">
+                    <div class="container">
+                        <div class="row align-items-center">
 
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy and Terms</a></li>
+                            <div class="col-lg-12 col-12 border-bottom pb-5 mb-5">
+                                <div class="d-flex">
+                                    <a href="index.html" class="navbar-brand">
+                                        <i class="bi-bullseye brand-logo"></i>
+                                        <span class="brand-text">Leadership
+                                            <br>
+                                            Event</span>
+                                    </a>
 
-                            <li class="footer-menu-item"><a href="contact.html" class="footer-menu-link">Contact</a></li>
-                        </ul>
-                    </div>
+                                    <ul class="social-icon ms-auto">
+                                        <li><a href="#" class="social-icon-link bi-facebook"></a></li>
 
-                        
-                    <div class="col-lg-5 col-12 ms-lg-auto">
-                        <div class="copyright-text-wrap d-flex align-items-center">
-                            <p class="copyright-text ms-lg-auto me-4 mb-0">Copyright © 2022 Leadership Event Co., Ltd. 
+                                        <li><a href="#" class="social-icon-link bi-instagram"></a></li>
+
+                                        <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
+
+                                        <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-7 col-12">
+                                <ul class="footer-menu d-flex flex-wrap">
+                                    <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">Our Story</a></li>
+
+                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Code of Conduct</a></li>
+
+                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy and Terms</a></li>
+
+                                    <li class="footer-menu-item"><a href="contact.html" class="footer-menu-link">Contact</a></li>
+                                </ul>
+                            </div>
+
+
+                            <div class="col-lg-5 col-12 ms-lg-auto">
+                                <div class="copyright-text-wrap d-flex align-items-center">
+                                    <p class="copyright-text ms-lg-auto me-4 mb-0">
+                                        Copyright © 2022 Leadership Event Co., Ltd. 
                             
-                            <br>All Rights Reserved. 
+                            <br>
+                                        All Rights Reserved. 
           
-          					<br><br>Design: <a title="CSS Templates" rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+          					<br>
+                                        <br>
+                                        Design: <a title="CSS Templates" rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a>
+                                    </p>
 
-                            <a href="#section_1" class="bi-arrow-up arrow-icon custom-link"></a>
+                                    <a href="#section_1" class="bi-arrow-up arrow-icon custom-link"></a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
+                </footer>
 
-                </div>
-            </div>
-        </footer>
+                <!-- JAVASCRIPT FILES -->
+                <script src="js/jquery.min.js"></script>
+                <script src="js/bootstrap.min.js"></script>
+                <script src="js/jquery.sticky.js"></script>
+                <script src="js/click-scroll.js"></script>
+                <script src="js/custom.js"></script>
+                <script src="js/page-transitions.js"></script>
 
-        <!-- JAVASCRIPT FILES -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.sticky.js"></script>
-        <script src="js/click-scroll.js"></script>
-        <script src="js/custom.js"></script>
-        <script src="js/page-transitions.js"></script>
-
-    </body>
-</html>
+            </body>
+            </html>
         </div>
     </form>
 </body>
